--- a/index.html
+++ b/index.html
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "style.css">
-    <title>project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&family=Work+Sans:wght@100&display=swap" rel="stylesheet">
+    <title>Tic-Tac-Toe</title>
 </head>
 <body>
+    <header>
+        <div class = 'home'>
+            <img src="img/home-icon.png">
+        </div>
+        <div class = "player">
+            <h2 class = "name">Player</h2>
+            <div class = "tally">
+                <div class = "tally-tag">Wins</div>
+                <div class = "tally-count">0</div>
+            </div> 
+        </div>
+        <div class = "player">
+            <h2 class = "name">Computer</h2>
+            <div class = "tally">
+                <div class = "tally-tag">Wins</div>
+                <div class = "tally-count">0</div>
+            </div> 
+        </div>
+        <div class = 'settings'>
+            <img src="img/Settings-icon.png">
+        </div>       
+    </header>
     <div class = "board">
         <div class = "row1">
             <div class = "square top left" data-index = "1"></div>
