--- a/index.html
+++ b/index.html
@@ -33,31 +33,17 @@
             <img src="img/Settings-icon.png">
         </div>       
     </header>
-    <div class = "board">
-        <div class = "row1">
-            <div class = "square top left" data-index = "1"></div>
-            <div class = "square top middle" data-index = "2"></div>
-            <div class = "square top right" data-index = "3"></div>
-        </div>
-        <div class = "row2">
-            <div class = "square middle left" data-index = "4"></div>
-            <div class = "square middle" data-index = "5"></div>
-            <div class = "square middle right" data-index = "6"></div>
-        </div>
-        <div class = "row3">
-            <div class = "square bottom left" data-index = "7"></div>
-            <div class = "square bottom middle" data-index = "8"></div>
-            <div class = "square bottom right" data-index = "9"></div>
-        </div>
-        <div class = "lines">
-            <div class = "row1-line"></div>
-            <div class = "row2-line"></div>
-            <div class = "row3-line"></div>
-            <div class = "column1-line"></div>
-            <div class = "column2-line"></div>
-            <div class = "column3-line"></div>
-            <div class = "diagonal1-line"></div>
-            <div class = "diagonal2-line"></div>
+    <div class = "board-overlay">
+        <div class = 'board'>
+            <div class="square" data-index = "1"></div>
+            <div class="square" data-index = "2"></div>
+            <div class="square" data-index = "3"></div>
+            <div class="square" data-index = "4"></div>
+            <div class="square" data-index = "5"></div>
+            <div class="square" data-index = "6"></div>
+            <div class="square" data-index = "7"></div>
+            <div class="square" data-index = "8"></div>
+            <div class="square" data-index = "9"></div>
         </div>
     </div> 
     <script src="game.js"></script>
