--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <h2 class = "name">Player</h2>
             <div class = "tally">
                 <div class = "tally-tag">Wins</div>
-                <div class = "tally-count">0</div>
+                <div class = "player-tally-count">0</div>
             </div> 
         </div>
         <div class = "player">
             <h2 class = "name">Computer</h2>
             <div class = "tally">
                 <div class = "tally-tag">Wins</div>
-                <div class = "tally-count">0</div>
+                <div class = "computer-tally-count">0</div>
             </div> 
         </div>
         <div class = 'settings'>
