--- a/index.html
+++ b/index.html
@@ -34,17 +34,7 @@
         </div>       
     </header>
     <div class = "board-overlay">
-        <div class = 'board'>
-            <div class="square" data-index = "1"></div>
-            <div class="square" data-index = "2"></div>
-            <div class="square" data-index = "3"></div>
-            <div class="square" data-index = "4"></div>
-            <div class="square" data-index = "5"></div>
-            <div class="square" data-index = "6"></div>
-            <div class="square" data-index = "7"></div>
-            <div class="square" data-index = "8"></div>
-            <div class="square" data-index = "9"></div>
-        </div>
+        <div class = 'board'></div>
     </div> 
     <script src="game.js"></script>
 </body>
