added settings sidebar

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
             <img src="img/Settings-icon.png">
         </div>       
     </header>
-    <div class = "board-overlay">
-        <div class = 'board'></div>
-    </div> 
+    <main>
+        <div class = "board-overlay">
+            <div class = 'board'></div>
+        </div>
+        <div class = 'settings-menu'></div>
+    </main>
+    <script src="style.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
