--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class = 'home'>
-            <img src="img/home-icon.png">
+            <img src="img/Home-icon.png">
         </div>
         <div class = "player">
             <h2 class = "name">Player</h2>
@@ -39,7 +39,7 @@
         </div>
         <div class = 'settings-menu'></div>
     </main>
-    <script src="style.js"></script>
     <script src="game.js"></script>
+    <script src="style.js"></script>
 </body>
 </html>
