--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     </main>
     <script src="game.js"></script>
     <script src="style.js"></script>
+    <script src="AI.js"></script>
 </body>
 </html>
