--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class = 'home'>
-            <img src="img/Home-icon.png">
+            <img class = "home-icon-img" src="img/Home-icon.png">
         </div>
         <div class = "player">
             <h2 class = "name">Player</h2>
@@ -30,7 +30,7 @@
             </div> 
         </div>
         <div class = 'settings-icon'>
-            <img src="img/Settings-icon.png">
+            <img class = "settings-icon-img" src="img/Settings-icon.png">
         </div>       
     </header>
     <main>
@@ -39,10 +39,12 @@
         </div>
         <div class = "settings-menu">
             <div class = "dropdown">
-                <button class = "themes" data-dropdown-button>Themes</button>
+                <button class = "themes" data-dropdown-button>Themes +</button>
                 <ul class = "dropdown-menu" data-dropwdown>
-                   <li class = 'theme'>Native Night</li>
-                   <li class = 'theme'>Bright White</li>
+                   <li class = 'theme'>Theme 1</li>
+                   <li class = 'theme'>Theme 2</li>
+                   <li class = 'theme'>Theme 3</li>
+                   <li class = 'theme'>Theme 4</li>
                 </ul>
             </div>
         </div>
