added grid size to settings menu

--- a/index.html
+++ b/index.html
@@ -39,12 +39,21 @@
         </div>
         <div class = "settings-menu">
             <div class = "dropdown">
-                <button class = "themes" data-dropdown-button>Themes +</button>
+                <button class = "themes" data-dropdown-button>Themes</button>
                 <ul class = "dropdown-menu" data-dropwdown>
                    <li class = 'theme'>Theme 1</li>
                    <li class = 'theme'>Theme 2</li>
                    <li class = 'theme'>Theme 3</li>
                    <li class = 'theme'>Theme 4</li>
+                </ul>
+            </div>
+            <div class = "dropdown">
+                <button class = "gridSizes" data-dropdown-button>Grid Size</button>
+                <ul class = "dropdown-menu" data-dropwdown>
+                   <li class = 'gridSize'>3 x 3</li>
+                   <li class = 'gridSize'>4 x 4</li>
+                   <li class = 'gridSize'>5 x 5</li>
+                   <li class = 'gridSize'>6 x 6</li>
                 </ul>
             </div>
         </div>
