--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                    <li class = 'gridSize'>4 x 4</li>
                    <li class = 'gridSize'>5 x 5</li>
                    <li class = 'gridSize'>6 x 6</li>
+                   <li class = 'gridSize'>7 x 7</li>
+                   <li class = 'gridSize'>8 x 8</li>
                 </ul>
             </div>
         </div>
