highlight the selected settings

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class = 'home'>
-            <img class = "home-icon-img" src="img/Home-icon.png">
+            <img class = "home-icon-img" src="img/Home-icon-white.png">
         </div>
         <div class = "player">
             <h2 class = "name">Player</h2>
@@ -30,7 +30,7 @@
             </div> 
         </div>
         <div class = 'settings-icon'>
-            <img class = "settings-icon-img" src="img/Settings-icon.png">
+            <img class = "settings-icon-img" src="img/Settings-icon-white.png">
         </div>       
     </header>
     <main>
