more theme updates

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
             <div class = "dropdown">
                 <button class = "themes" data-dropdown-button>Themes</button>
                 <ul class = "dropdown-menu" data-dropwdown>
-                   <li class = 'theme'>Theme 1</li>
-                   <li class = 'theme'>Theme 2</li>
-                   <li class = 'theme'>Theme 3</li>
-                   <li class = 'theme'>Theme 4</li>
+                   <li class = 'theme'>Melbourne Blue</li>
+                   <li class = 'theme'>Orange Pop</li>
+                   <li class = 'theme'>Mountain Mist</li>
+                   <li class = 'theme'>Sleeping Lilac</li>
+                   <li class = 'theme'>Stone & Chalk</li>
                 </ul>
             </div>
             <div class = "dropdown">
