added multiplayer toggle

--- a/index.html
+++ b/index.html
@@ -38,20 +38,24 @@
             <div class = 'board'></div>
         </div>
         <div class = "settings-menu">
+            <div class = 'multiplayer'>Multiplayer?
+                <input type="checkbox" id="switch"/>
+                <label for="switch">Toggle</label>   
+            </div>
             <div class = "dropdown">
                 <button class = "themes" data-dropdown-button>Themes</button>
                 <ul class = "dropdown-menu" data-dropwdown>
-                   <li class = 'theme'>Melbourne Blue</li>
+                   <li class = 'theme'>Winter Blue</li>
                    <li class = 'theme'>Orange Pop</li>
                    <li class = 'theme'>Mountain Mist</li>
-                   <li class = 'theme'>Sleeping Lilac</li>
+                   <li class = 'theme'>Soothing Lilac</li>
                    <li class = 'theme'>Stone & Chalk</li>
                 </ul>
             </div>
             <div class = "dropdown">
                 <button class = "gridSizes" data-dropdown-button>Grid Size</button>
                 <ul class = "dropdown-menu" data-dropwdown>
-                   <li class = 'gridSize'>3 x 3</li>
+                   <li class = 'gridSize selected'>3 x 3</li>
                    <li class = 'gridSize'>4 x 4</li>
                    <li class = 'gridSize'>5 x 5</li>
                    <li class = 'gridSize'>6 x 6</li>
