--- a/index.html
+++ b/index.html
@@ -42,9 +42,16 @@
                 <input type = "checkbox" id = "switch"/>
                 <label for="switch">Toggle</label>   
             </div>
+            <div class = "menu AI">
+                <div class = "menu-header">AI Difficulty</div>
+                <ul class = "menu-list">
+                   <li class = 'difficulty selected'>Easy</li>
+                   <li class = 'difficulty'>Hard</li>
+                </ul>
+            </div>
             <div class = "menu">
-                <div class = "menu-header" data-dropdown-button>Themes</div>
-                <ul class = "menu-list" data-dropwdown>
+                <div class = "menu-header">Themes</div>
+                <ul class = "menu-list">
                    <li class = 'theme'>Winter Blue</li>
                    <li class = 'theme'>Orange Pop</li>
                    <li class = 'theme'>Mountain Mist</li>
@@ -53,8 +60,8 @@
                 </ul>
             </div>
             <div class = "menu">
-                <div class = "menu-header" data-dropdown-button>Grid Size</div>
-                <ul class = "menu-list" data-dropwdown>
+                <div class = "menu-header">Grid Size</div>
+                <ul class = "menu-list">
                    <li class = 'gridSize selected'>3 x 3</li>
                    <li class = 'gridSize'>4 x 4</li>
                    <li class = 'gridSize'>5 x 5</li>
@@ -65,7 +72,7 @@
             </div>
         </div>
     </main>
-    <script src="style.js"></script>
+    <script src="settings.js"></script>
     <script src="game.js"></script>
     <script src="AI.js"></script>
 </body>
