hard AI working

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class = "menu AI">
                 <div class = "menu-header">AI Difficulty</div>
                 <ul class = "menu-list">
-                   <li class = 'difficulty selected'>Easy</li>
-                   <li class = 'difficulty'>Hard</li>
+                   <li class = 'difficulty'>Easy</li>
+                   <li class = 'difficulty selected'>Hard</li>
                 </ul>
             </div>
             <div class = "menu">
