initial support for mobile screen sizes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <div class = 'home'>
-            <img class = "home-icon-img" src="img/Home-icon-white.png">
+        <div class = 'hash'>
+            <img class = "hash-icon-img" src="img/Hash.png">
         </div>
         <div class = "player">
             <h2 class = "player-name">Player</h2>
