clean up and small refactoring

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </ul>
             </div>
             <div class = "menu">
-                <div class = "menu-header">Grid Size</div>
+                <div class = "menu-header">Game Mode</div>
                 <ul class = "menu-list">
                    <li class = 'gridSize selected'>3 x 3</li>
                    <li class = 'gridSize'>4 x 4</li>
